lib/src/cover_crypt/generated_bindings.dart


  late final _h_aes_create_encryption_cachePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int)>>('h_aes_create_encryption_cache');
  late final _h_aes_create_encryption_cache =
      _h_aes_create_encryption_cachePtr.asFunction<
          int Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, int)>();

  /// The function should be called to reclaim memory
  /// of the cache created using h_aes_create_encrypt_cache()
  /// # Safety
  int h_aes_destroy_encryption_cache(
    int cache_handle,
  ) {
    return _h_aes_destroy_encryption_cache(
      cache_handle,
    );
  }

  late final _h_aes_destroy_encryption_cachePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'h_aes_destroy_encryption_cache');
  late final _h_aes_destroy_encryption_cache =
      _h_aes_destroy_encryption_cachePtr.asFunction<int Function(int)>();

  /// Encrypt a header using an encryption cache
  /// The symmetric key and header bytes are returned in the first OUT parameters
  /// # Safety
  int h_aes_encrypt_header_using_cache(
    ffi.Pointer<ffi.Char> symmetric_key_ptr,
    ffi.Pointer<ffi.Int> symmetric_key_len,
    ffi.Pointer<ffi.Char> header_bytes_ptr,
    ffi.Pointer<ffi.Int> header_bytes_len,
    int cache_handle,
    ffi.Pointer<ffi.Char> attributes_ptr,
    ffi.Pointer<ffi.Char> uid_ptr,
    int uid_len,
    ffi.Pointer<ffi.Char> additional_data_ptr,
    int additional_data_len,
  ) {
    return _h_aes_encrypt_header_using_cache(
      symmetric_key_ptr,
      symmetric_key_len,
      header_bytes_ptr,
      header_bytes_len,
      cache_handle,
      attributes_ptr,
      uid_ptr,
      uid_len,
      additional_data_ptr,
      additional_data_len,
    );
  }

  late final _h_aes_encrypt_header_using_cachePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int)>>('h_aes_encrypt_header_using_cache');
  late final _h_aes_encrypt_header_using_cache =
      _h_aes_encrypt_header_using_cachePtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>,
              int)>();

  /// Encrypt a header without using an encryption cache.
  /// It is slower but does not require destroying any cache when done.
  ///
  /// The symmetric key and header bytes are returned in the first OUT parameters
  /// # Safety
  int h_aes_encrypt_header(
    ffi.Pointer<ffi.Char> symmetric_key_ptr,
    ffi.Pointer<ffi.Int> symmetric_key_len,
    ffi.Pointer<ffi.Char> header_bytes_ptr,
    ffi.Pointer<ffi.Int> header_bytes_len,
    ffi.Pointer<ffi.Char> policy_ptr,
    ffi.Pointer<ffi.Char> public_key_ptr,
    int public_key_len,
    ffi.Pointer<ffi.Char> attributes_ptr,
    ffi.Pointer<ffi.Char> uid_ptr,
    int uid_len,
    ffi.Pointer<ffi.Char> additional_data_ptr,
    int additional_data_len,
  ) {
    return _h_aes_encrypt_header(
      symmetric_key_ptr,
      symmetric_key_len,
      header_bytes_ptr,
      header_bytes_len,
      policy_ptr,
      public_key_ptr,
      public_key_len,
      attributes_ptr,
      uid_ptr,
      uid_len,
      additional_data_ptr,
      additional_data_len,
    );
  }

  late final _h_aes_encrypt_headerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int)>>('h_aes_encrypt_header');
  late final _h_aes_encrypt_header = _h_aes_encrypt_headerPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int)>();

  /// Create a cache of the User Decryption Key which can be re-used
  /// when decrypting multiple messages. This avoids having to re-instantiate
  /// the user key on the Rust side on every decryption which is costly.
  ///
  /// This method is to be used in conjunction with
  /// h_aes_decrypt_header_using_cache()
  ///
  /// WARN: h_aes_destroy_decryption_cache() should be called
  /// to reclaim the memory of the cache when done
  /// # Safety
  int h_aes_create_decryption_cache(
    ffi.Pointer<ffi.Int> cache_handle,
    ffi.Pointer<ffi.Char> user_decryption_key_ptr,
    int user_decryption_key_len,
  ) {
    return _h_aes_create_decryption_cache(
      cache_handle,
      user_decryption_key_ptr,
      user_decryption_key_len,
    );
  }

  late final _h_aes_create_decryption_cachePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('h_aes_create_decryption_cache');
  late final _h_aes_create_decryption_cache =
      _h_aes_create_decryption_cachePtr.asFunction<
          int Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Char>, int)>();

  /// The function should be called to reclaim memory
  /// of the cache created using h_aes_create_decryption_cache()
  /// # Safety
  int h_aes_destroy_decryption_cache(
    int cache_handle,
  ) {
    return _h_aes_destroy_decryption_cache(
      cache_handle,
    );
  }

  late final _h_aes_destroy_decryption_cachePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'h_aes_destroy_decryption_cache');
  late final _h_aes_destroy_decryption_cache =
      _h_aes_destroy_decryption_cachePtr.asFunction<int Function(int)>();

  /// Decrypt an encrypted header using a cache.
  /// Returns the symmetric key,
  /// the uid and additional data if available.
  ///
  /// No additional data will be returned if the `additional_data_ptr` is NULL.
  ///
  /// # Safety
  int h_aes_decrypt_header_using_cache(
    ffi.Pointer<ffi.Char> symmetric_key_ptr,
    ffi.Pointer<ffi.Int> symmetric_key_len,
    ffi.Pointer<ffi.Char> uid_ptr,
    ffi.Pointer<ffi.Int> uid_len,
    ffi.Pointer<ffi.Char> additional_data_ptr,
    ffi.Pointer<ffi.Int> additional_data_len,
    ffi.Pointer<ffi.Char> encrypted_header_ptr,
    int encrypted_header_len,
    int cache_handle,
  ) {
    return _h_aes_decrypt_header_using_cache(
      symmetric_key_ptr,
      symmetric_key_len,
      uid_ptr,
      uid_len,
      additional_data_ptr,
      additional_data_len,
      encrypted_header_ptr,
      encrypted_header_len,
      cache_handle,
    );
  }

  late final _h_aes_decrypt_header_using_cachePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int)>>('h_aes_decrypt_header_using_cache');
  late final _h_aes_decrypt_header_using_cache =
      _h_aes_decrypt_header_using_cachePtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              int,
              int)>();

  /// # Safety
  int h_get_encrypted_header_size(
    ffi.Pointer<ffi.Char> encrypted_ptr,
    int encrypted_len,
  ) {
    return _h_get_encrypted_header_size(
      encrypted_ptr,
      encrypted_len,
    );
  }

  late final _h_get_encrypted_header_sizePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>>(
      'h_get_encrypted_header_size');
  late final _h_get_encrypted_header_size = _h_get_encrypted_header_sizePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  /// Decrypt an encrypted header returning the symmetric key,
  /// the uid and additional data if available.
  ///
  /// Slower tha using a cache but avoids handling the cache creation and
  /// destruction.
  ///
  /// No additional data will be returned if the `additional_data_ptr` is NULL.
  ///
  /// # Safety
  int h_aes_decrypt_header(
    ffi.Pointer<ffi.Char> symmetric_key_ptr,
    ffi.Pointer<ffi.Int> symmetric_key_len,
    ffi.Pointer<ffi.Char> uid_ptr,
    ffi.Pointer<ffi.Int> uid_len,
    ffi.Pointer<ffi.Char> additional_data_ptr,
    ffi.Pointer<ffi.Int> additional_data_len,
    ffi.Pointer<ffi.Char> encrypted_header_ptr,
    int encrypted_header_len,
    ffi.Pointer<ffi.Char> user_decryption_key_ptr,
    int user_decryption_key_len,
  ) {
    return _h_aes_decrypt_header(
      symmetric_key_ptr,
      symmetric_key_len,
      uid_ptr,
      uid_len,
      additional_data_ptr,
      additional_data_len,
      encrypted_header_ptr,
      encrypted_header_len,
      user_decryption_key_ptr,
      user_decryption_key_len,
    );
  }

  late final _h_aes_decrypt_headerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int)>>('h_aes_decrypt_header');
  late final _h_aes_decrypt_header = _h_aes_decrypt_headerPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int)>();

  /// # Safety
  int h_aes_symmetric_encryption_overhead() {
    return _h_aes_symmetric_encryption_overhead();
  }

  late final _h_aes_symmetric_encryption_overheadPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'h_aes_symmetric_encryption_overhead');
  late final _h_aes_symmetric_encryption_overhead =
      _h_aes_symmetric_encryption_overheadPtr.asFunction<int Function()>();

  /// # Safety
  int h_aes_encrypt_block(
    ffi.Pointer<ffi.Char> encrypted_ptr,
    ffi.Pointer<ffi.Int> encrypted_len,
    ffi.Pointer<ffi.Char> symmetric_key_ptr,
    int symmetric_key_len,
    ffi.Pointer<ffi.Char> uid_ptr,
    int uid_len,
    int block_number,
    ffi.Pointer<ffi.Char> data_ptr,
    int data_len,
  ) {
    return _h_aes_encrypt_block(
      encrypted_ptr,
      encrypted_len,
      symmetric_key_ptr,
      symmetric_key_len,
      uid_ptr,
      uid_len,
      block_number,
      data_ptr,
      data_len,
    );
  }
